package.sh update